ha/zwave-js-ui/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zwave-js-ui
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.1.27
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8091
      targetPort: 8091
      name: web-ui
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: websocket
  selector:
    app: zwave-js-ui
