ha/zwave-js-ui/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zwave-js-ui
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.1.0/24
spec:
  rules:
    - host: zwave.internal.neils.house
      http:
        paths:
          - backend:
              service:
                name: zwave-js-ui
                port:
                  number: 8091
            path: /
            pathType: Prefix
